--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+v0.9.1
+应答器新增了新的信息包，增加了针对新的信息包的解析逻辑
+客户端强制在导入数据表之前调用ExcelConverter程序进程检查
+新增应答器文档
+调整数据表的检查逻辑
+增加客户端连接时的版本号检查
 V0.9.0
 应答器位置部分和车站名站台侧的部分已经修改完成
 others文件夹下增加了京张和昌赣的新线路数据和数据表内容
